--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -58,6 +58,7 @@ jobs:
 
         - task: TerraformTaskV1@0
           displayName: 'Apply Terraform'
+          name: TerraformApply
           env:
             AZDO_PERSONAL_ACCESS_TOKEN: '$(AZDO_PERSONAL_ACCESS_TOKEN)'
           inputs:
