--- a/helpers/select-environment.yml
+++ b/helpers/select-environment.yml
@@ -3,7 +3,7 @@ parameters:
 - name: buildReason
 
 variables:
-- ${{ if and(ne(parameters.sourceBranchName, 'master'), ne(parameters.buildReason, 'PullRequest')) }}:
+- ${{ if and(ne(variables.Build.SourceBranchName, 'master'), ne(parameters.buildReason, 'PullRequest')) }}:
   - group: 'DEV'
 
 - ${{ if and(ne(parameters.sourceBranchName, 'master'), eq(parameters.buildReason, 'PullRequest')) }}:
