pass build variables as params

--- a/helpers/select-environment.yml
+++ b/helpers/select-environment.yml
@@ -1,9 +1,13 @@
+parameters:
+- name: sourceBranchName 
+- name: buildReason
+
 variables:
-- ${{ if and(ne(variables.Build.SourceBranchName, 'master'), ne(variables.Build.Reason, 'PullRequest')) }}:
+- ${{ if and(ne(parameters.sourceBranchName, 'master'), ne(parameters.buildReason, 'PullRequest')) }}:
   - group: 'DEV'
 
-- ${{ if and(ne(variables.Build.SourceBranchName, 'master'), eq(variables.Build.Reason, 'PullRequest')) }}:
+- ${{ if and(ne(parameters.sourceBranchName, 'master'), eq(parameters.buildReason, 'PullRequest')) }}:
   - group: 'QA'
 
-- ${{ if eq(variables.Build.SourceBranchName, 'master') }}:
+- ${{ if eq(parameters.sourceBranchName, 'master') }}:
   - group: 'UAT'
