--- a/helpers/terraform-environment.yml
+++ b/helpers/terraform-environment.yml
@@ -3,6 +3,8 @@ parameters:
 - name: AWS_ACCOUNT 
 - name: AWS_REGION
 - name: ENVIRONMENT_NAME
+- name: localPath
+- name: repoName
 
 variables:
   TF_VERSION: '0.14.4'
@@ -10,8 +12,8 @@ variables:
   TF_IN_AUTOMATION: true
   TF_INPUT: false
   TF_BACKEND_BUCKET: '${{ parameters.AWS_ACCOUNT }}-state'
-  TF_BACKEND_KEY: '${{ variables.Build.Repository.Name }}.tfstate'
-  TF_PATH: '${{ variables.Build.Repository.LocalPath }}/terraform'
+  TF_BACKEND_KEY: '${{ parameters.repoName }}.tfstate'
+  TF_PATH: '${{ parameters.localPath }}/terraform'
   TF_ROLE_ARN: 'arn:aws:iam::${{ parameters.AWS_ACCOUNT }}:role/wsl_role_deploy_Infrastructure'
   TF_VAR_AWS_ACCOUNT: '${{ parameters.AWS_ACCOUNT }}'
   TF_VAR_AWS_REGION: '${{ parameters.AWS_REGION }}'
