--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -5,6 +5,9 @@ parameters:
 
 variables:
 - template: helpers/select-environment.yml
+  parameters:
+    sourceBranchName: '$(Build.SourceBranchName)'
+    buildReason: '$(Build.Reason)'
 
 jobs:
 - deployment: DeployInfrastructure
@@ -16,6 +19,8 @@ jobs:
       AWS_ACCOUNT: '$(AWS_ACCOUNT)'  
       AWS_REGION: '$(AWS_REGION)'
       ENVIRONMENT_NAME: '$(ENVIRONMENT_NAME)'
+      localPath: '$(Build.Repository.LocalPath)'
+      repoName: '$(Build.Repository.Name)'
 
   strategy:
     runOnce:
