--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -2,25 +2,29 @@ parameters:
 - name: usersteps
   type: stepList
   default: []
+- name: terraformVersion
+  type: string
 
 variables:
 - template: helpers/select-environment.yml
   parameters:
-    sourceBranchName: '$(Build.SourceBranchName)'
-    buildReason: '$(Build.Reason)'
+    sourceBranchName: $(Build.SourceBranchName)
+    buildReason: $(Build.Reason)
 
 jobs:
 - deployment: DeployInfrastructure
-  displayName: 'Deploy Infrastructure'
-  environment: '$(ENVIRONMENT_NAME)'
+  displayName: Deploy Infrastructure
+  environment: $(ENVIRONMENT_NAME)
   variables:
   - template: helpers/terraform-environment.yml
     parameters:
-      AWS_ACCOUNT: '$(AWS_ACCOUNT)'  
-      AWS_REGION: '$(AWS_REGION)'
-      ENVIRONMENT_NAME: '$(ENVIRONMENT_NAME)'
-      localPath: '$(Build.Repository.LocalPath)'
-      repoName: '$(Build.Repository.Name)'
+      AWS_ACCOUNT: $(AWS_ACCOUNT)  
+      AWS_REGION: $(AWS_REGION)
+      ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
+      localPath: $(Build.Repository.LocalPath)
+      projectName: $(System.TeamProject)
+      repoName: $(Build.Repository.Name)
+      terraformVersion: ${{ parameters.terraformVersion }}
 
   strategy:
     runOnce:
@@ -32,50 +36,50 @@ jobs:
 
         - task: TerraformInstaller@0
           displayName: 'Install Terraform'
-          condition: ne('${{ variables.TF_VERSION }}', '')
+          condition: ne(${{ variables.TF_VERSION }}', '')
           inputs:
-            terraformVersion: '$(TF_VERSION)'
+            terraformVersion: $(TF_VERSION)
 
         - script: terraform version
 
         - task: TerraformTaskV1@0
-          displayName: 'Initialise Terraform'
+          displayName: Initialise Terraform
           inputs:
-            provider: '$(TF_PROVIDER)'
-            command: 'init'
-            workingDirectory: '$(TF_PATH)'
-            commandOptions: '-backend-config=role_arn=$(TF_ROLE_ARN)'
-            backendServiceAWS: '$(TF_SERVICE_CONNECTOR)'
-            backendAWSBucketName: '$(TF_BACKEND_BUCKET)'
-            backendAWSKey: '$(TF_BACKEND_KEY)'
+            provider: $(TF_PROVIDER)
+            command: init
+            workingDirectory: $(TF_PATH)
+            commandOptions: -backend-config=role_arn=$(TF_ROLE_ARN)
+            backendServiceAWS: $(TF_SERVICE_CONNECTOR)
+            backendAWSBucketName: $(TF_BACKEND_BUCKET)
+            backendAWSKey: $(TF_BACKEND_KEY)
 
         - task: TerraformTaskV1@0
-          displayName: 'Plan Terraform'
+          displayName: Plan Terraform
           name: TerraformPlan
           env:
-            AZDO_PERSONAL_ACCESS_TOKEN: '$(AZDO_PERSONAL_ACCESS_TOKEN)'
+            AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
           inputs:
-            provider: '$(TF_PROVIDER)'
-            command: 'plan'
-            workingDirectory: '$(TF_PATH)'
-            commandOptions: '-out=tfplan -var-file=$(TF_VAR_FILE)'
-            environmentServiceNameAWS: '$(TF_SERVICE_CONNECTOR)'
+            provider: $(TF_PROVIDER)
+            command: plan
+            workingDirectory: $(TF_PATH)
+            commandOptions: -out=tfplan -var-file=$(TF_VAR_FILE)
+            environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
         - publish: $(TerraformPlan.jsonPlanFilePath)
-          artifact: 'tfplan-$(ENVIRONMENT_NAME)'
+          artifact: tfplan-$(ENVIRONMENT_NAME)
           displayName: Publish Terraform Plan
 
         - task: TerraformTaskV1@0
-          displayName: 'Apply Terraform'
+          displayName: Apply Terraform
           name: TerraformApply
           env:
-            AZDO_PERSONAL_ACCESS_TOKEN: '$(AZDO_PERSONAL_ACCESS_TOKEN)'
+            AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
           inputs:
-            provider: '$(TF_PROVIDER)'
-            command: 'apply'
-            workingDirectory: '$(TF_PATH)'
-            commandOptions: 'tfplan'
-            environmentServiceNameAWS: '$(TF_SERVICE_CONNECTOR)'
+            provider: $(TF_PROVIDER)
+            command: apply
+            workingDirectory: $(TF_PATH)
+            commandOptions: tfplan
+            environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
         - ${{ each step in parameters.usersteps }}:
           - ${{ step }}
