--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -1,4 +1,7 @@
 parameters:
+- name: useTerraform
+  type: boolean
+  default: true
 - name: usersteps
   type: stepList
   default: []
@@ -17,15 +20,16 @@ jobs:
   displayName: Deploy Infrastructure
   environment: $(ENVIRONMENT_NAME)
   variables:
-  - template: helpers/terraform-environment.yml
-    parameters:
-      AWS_ACCOUNT: $(AWS_ACCOUNT)  
-      AWS_REGION: $(AWS_REGION)
-      ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
-      localPath: $(Build.Repository.LocalPath)
-      projectName: $(System.TeamProject)
-      repoName: $(Build.Repository.Name)
-      terraformVersion: ${{ parameters.terraformVersion }}
+  - ${{ if eq(parameters.useTerraform, true) }}:
+    - template: helpers/terraform-environment.yml
+      parameters:
+        AWS_ACCOUNT: $(AWS_ACCOUNT)  
+        AWS_REGION: $(AWS_REGION)
+        ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
+        localPath: $(Build.Repository.LocalPath)
+        projectName: $(System.TeamProject)
+        repoName: $(Build.Repository.Name)
+        terraformVersion: ${{ parameters.terraformVersion }}
 
   strategy:
     runOnce:
@@ -33,54 +37,52 @@ jobs:
         steps:
         - checkout: self
 
-        - script: terraform version
+        - ${{ if eq(parameters.useTerraform, true) }}:
 
-        - task: TerraformInstaller@0
-          displayName: 'Install Terraform'
-          condition: ne('${{ variables.TF_VERSION }}', '')
-          inputs:
-            terraformVersion: $(TF_VERSION)
+          - task: TerraformInstaller@0
+            displayName: 'Install Terraform'
+            condition: ne('${{ variables.TF_VERSION }}', '')
+            inputs:
+              terraformVersion: $(TF_VERSION)
 
-        - script: terraform version
+          - task: TerraformTaskV1@0
+            displayName: Initialise Terraform
+            inputs:
+              provider: $(TF_PROVIDER)
+              command: init
+              workingDirectory: $(TF_PATH)
+              commandOptions: -backend-config=role_arn=$(TF_ROLE_ARN)
+              backendServiceAWS: $(TF_SERVICE_CONNECTOR)
+              backendAWSBucketName: $(TF_BACKEND_BUCKET)
+              backendAWSKey: $(TF_BACKEND_KEY)
 
-        - task: TerraformTaskV1@0
-          displayName: Initialise Terraform
-          inputs:
-            provider: $(TF_PROVIDER)
-            command: init
-            workingDirectory: $(TF_PATH)
-            commandOptions: -backend-config=role_arn=$(TF_ROLE_ARN)
-            backendServiceAWS: $(TF_SERVICE_CONNECTOR)
-            backendAWSBucketName: $(TF_BACKEND_BUCKET)
-            backendAWSKey: $(TF_BACKEND_KEY)
+          - task: TerraformTaskV1@0
+            displayName: Plan Terraform
+            name: TerraformPlan
+            env:
+              AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
+            inputs:
+              provider: $(TF_PROVIDER)
+              command: plan
+              workingDirectory: $(TF_PATH)
+              commandOptions: -out=tfplan -var-file=$(TF_VAR_FILE)
+              environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
-        - task: TerraformTaskV1@0
-          displayName: Plan Terraform
-          name: TerraformPlan
-          env:
-            AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
-          inputs:
-            provider: $(TF_PROVIDER)
-            command: plan
-            workingDirectory: $(TF_PATH)
-            commandOptions: -out=tfplan -var-file=$(TF_VAR_FILE)
-            environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
+          - publish: $(TerraformPlan.jsonPlanFilePath)
+            artifact: tfplan-$(ENVIRONMENT_NAME)
+            displayName: Publish Terraform Plan
 
-        - publish: $(TerraformPlan.jsonPlanFilePath)
-          artifact: tfplan-$(ENVIRONMENT_NAME)
-          displayName: Publish Terraform Plan
-
-        - task: TerraformTaskV1@0
-          displayName: Apply Terraform
-          name: TerraformApply
-          env:
-            AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
-          inputs:
-            provider: $(TF_PROVIDER)
-            command: apply
-            workingDirectory: $(TF_PATH)
-            commandOptions: tfplan
-            environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
+          - task: TerraformTaskV1@0
+            displayName: Apply Terraform
+            name: TerraformApply
+            env:
+              AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
+            inputs:
+              provider: $(TF_PROVIDER)
+              command: apply
+              workingDirectory: $(TF_PATH)
+              commandOptions: tfplan
+              environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
         - ${{ each step in parameters.usersteps }}:
           - ${{ step }}
