--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -15,81 +15,112 @@ variables:
     sourceBranchName: $(Build.SourceBranchName)
     buildReason: $(Build.Reason)
 
-jobs:
-- deployment: DeployInfrastructure
-  displayName: Deploy Infrastructure
-  environment: $(ENVIRONMENT_NAME)
-  variables:
+stages:
+- stage: Validate
+  jobs:
   - ${{ if eq(parameters.useTerraform, true) }}:
-    - template: helpers/terraform-environment.yml
-      parameters:
-        AWS_ACCOUNT: $(AWS_ACCOUNT)  
-        AWS_REGION: $(AWS_REGION)
-        ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
-        localPath: $(Build.Repository.LocalPath)
-        projectName: $(System.TeamProject)
-        repoName: $(Build.Repository.Name)
-        terraformVersion: ${{ parameters.terraformVersion }}
+    - job: CheckTerraform
+      displayName: Check Terraform
+      variables:
+      - ${{ if eq(parameters.useTerraform, true) }}:
+        - template: helpers/terraform-environment.yml
+          parameters:
+            AWS_ACCOUNT: $(AWS_ACCOUNT)  
+            AWS_REGION: $(AWS_REGION)
+            ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
+            localPath: $(Build.Repository.LocalPath)
+            projectName: $(System.TeamProject)
+            repoName: $(Build.Repository.Name)
+            terraformVersion: ${{ parameters.terraformVersion }}
+      steps:
+      - task: TerraformInstaller@0
+        displayName: 'Install Terraform'
+        condition: ne('${{ variables.TF_VERSION }}', '')
+        inputs:
+          terraformVersion: $(TF_VERSION)
 
-  strategy:
-    runOnce:
-      preDeploy:  
-        steps:
-        - checkout: self
+      - task: TerraformTaskV1@0
+        displayName: Initialise Terraform
+        inputs:
+          provider: $(TF_PROVIDER)
+          command: init
+          workingDirectory: $(TF_PATH)
+          commandOptions: -backend-config=role_arn=$(TF_ROLE_ARN)
+          backendServiceAWS: $(TF_SERVICE_CONNECTOR)
+          backendAWSBucketName: $(TF_BACKEND_BUCKET)
+          backendAWSKey: $(TF_BACKEND_KEY)
 
-        - ${{ if eq(parameters.useTerraform, true) }}:
-          - task: TerraformInstaller@0
-            displayName: 'Install Terraform'
-            condition: ne('${{ variables.TF_VERSION }}', '')
-            inputs:
-              terraformVersion: $(TF_VERSION)
+      - task: TerraformTaskV1@0
+        displayName: Plan Terraform
+        name: TerraformPlan
+        inputs:
+          provider: $(TF_PROVIDER)
+          command: plan
+          workingDirectory: $(TF_PATH)
+          commandOptions: -out=tfplan -var-file=$(TF_VAR_FILE)
+          environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
-          - task: TerraformTaskV1@0
-            displayName: Initialise Terraform
-            inputs:
-              provider: $(TF_PROVIDER)
-              command: init
-              workingDirectory: $(TF_PATH)
-              commandOptions: -backend-config=role_arn=$(TF_ROLE_ARN)
-              backendServiceAWS: $(TF_SERVICE_CONNECTOR)
-              backendAWSBucketName: $(TF_BACKEND_BUCKET)
-              backendAWSKey: $(TF_BACKEND_KEY)
+      - publish: $(TerraformPlan.jsonPlanFilePath)
+        artifact: terraform-plan-$(ENVIRONMENT_NAME)
+        displayName: Publish Terraform Plan
 
-          - task: TerraformTaskV1@0
-            displayName: Plan Terraform
-            name: TerraformPlan
-            env:
-              AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
-            inputs:
-              provider: $(TF_PROVIDER)
-              command: plan
-              workingDirectory: $(TF_PATH)
-              commandOptions: -out=tfplan -var-file=$(TF_VAR_FILE)
-              environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
+- stage: Deploy
+  jobs:
+  - deployment: DeployInfrastructure
+    displayName: Deploy Infrastructure
+    environment: $(ENVIRONMENT_NAME)
+    variables:
+    - ${{ if eq(parameters.useTerraform, true) }}:
+      - template: helpers/terraform-environment.yml
+        parameters:
+          AWS_ACCOUNT: $(AWS_ACCOUNT)  
+          AWS_REGION: $(AWS_REGION)
+          ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
+          localPath: $(Build.Repository.LocalPath)
+          projectName: $(System.TeamProject)
+          repoName: $(Build.Repository.Name)
+          terraformVersion: ${{ parameters.terraformVersion }}
+    strategy:
+      runOnce:
+        preDeploy:  
+          steps:
+          - checkout: self
 
-          - publish: $(TerraformPlan.jsonPlanFilePath)
-            artifact: terraform-plan-$(ENVIRONMENT_NAME)
-            displayName: Publish Terraform Plan
+          - ${{ if eq(parameters.useTerraform, true) }}:
+            - task: TerraformInstaller@0
+              displayName: 'Install Terraform'
+              condition: ne('${{ variables.TF_VERSION }}', '')
+              inputs:
+                terraformVersion: $(TF_VERSION)
 
-          - task: TerraformTaskV1@0
-            displayName: Apply Terraform
-            name: TerraformApply
-            env:
-              AZDO_PERSONAL_ACCESS_TOKEN: $(AZDO_PERSONAL_ACCESS_TOKEN)
-            inputs:
-              provider: $(TF_PROVIDER)
-              command: apply
-              workingDirectory: $(TF_PATH)
-              commandOptions: tfplan
-              environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
+            - task: TerraformTaskV1@0
+              displayName: Initialise Terraform
+              inputs:
+                provider: $(TF_PROVIDER)
+                command: init
+                workingDirectory: $(TF_PATH)
+                commandOptions: -backend-config=role_arn=$(TF_ROLE_ARN)
+                backendServiceAWS: $(TF_SERVICE_CONNECTOR)
+                backendAWSBucketName: $(TF_BACKEND_BUCKET)
+                backendAWSKey: $(TF_BACKEND_KEY)
 
-          - publish: $(TerraformApply.jsonOutputVariablesPath)
-            artifact: terraform-apply-$(ENVIRONMENT_NAME)
-            displayName: Publish Terraform Output
-            
-      deploy:  
-        steps:
-        - checkout: self
+            - task: TerraformTaskV1@0
+              displayName: Apply Terraform
+              name: TerraformApply
+              inputs:
+                provider: $(TF_PROVIDER)
+                command: apply
+                workingDirectory: $(TF_PATH)
+                # commandOptions: tfplan
+                environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
-        - ${{ each step in parameters.usersteps }}:
-          - ${{ step }}
+            - publish: $(TerraformApply.jsonOutputVariablesPath)
+              artifact: terraform-apply-$(ENVIRONMENT_NAME)
+              displayName: Publish Terraform Output
+
+        deploy:  
+          steps:
+          - checkout: self
+
+          - ${{ each step in parameters.usersteps }}:
+            - ${{ step }}
