--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -15,6 +15,16 @@ variables:
     sourceBranchName: $(Build.SourceBranchName)
     buildReason: $(Build.Reason)
 
+- template: helpers/terraform-environment.yml
+  parameters:
+    AWS_ACCOUNT: $(AWS_ACCOUNT)  
+    AWS_REGION: $(AWS_REGION)
+    ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
+    localPath: $(Build.Repository.LocalPath)
+    projectName: $(System.TeamProject)
+    repoName: $(Build.Repository.Name)
+    terraformVersion: ${{ parameters.terraformVersion }}
+
 stages:
 - stage: Validate
   jobs:
@@ -22,66 +32,34 @@ stages:
     - job: TerraformPlan
       displayName: Terraform Plan
       variables:
-      - template: helpers/terraform-environment.yml
-        parameters:
-          AWS_ACCOUNT: $(AWS_ACCOUNT)  
-          AWS_REGION: $(AWS_REGION)
-          ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
-          localPath: $(Build.Repository.LocalPath)
-          projectName: $(System.TeamProject)
-          repoName: $(Build.Repository.Name)
-          terraformVersion: ${{ parameters.terraformVersion }}
+      
       steps:
-      - task: TerraformInstaller@0
-        displayName: Install Terraform
-        condition: ne('${{ variables.TF_VERSION }}', '')
-        inputs:
-          terraformVersion: $(TF_VERSION)
-
-      - task: TerraformTaskV1@0
-        displayName: Initialise Terraform
-        inputs:
-          provider: $(TF_PROVIDER)
-          command: init
-          workingDirectory: $(TF_PATH)
-          commandOptions: -backend-config=role_arn=$(TF_ROLE_ARN)
-          backendServiceAWS: $(TF_SERVICE_CONNECTOR)
-          backendAWSBucketName: $(TF_BACKEND_BUCKET)
-          backendAWSKey: $(TF_BACKEND_KEY)
-
-      - template: helpers/publish-artifacts.yml
+      - template: helpers/terraform-steps.yml
         parameters:
-          artifactName: tfplan-$(ENVIRONMENT_NAME)
+          terraformVersion: ${{ parameters.terraformVersion }}
           steps: 
-          - task: TerraformTaskV1@0
-            displayName: Plan Terraform
-            name: TerraformPlan
-            inputs:
-              provider: $(TF_PROVIDER)
-              command: plan
-              workingDirectory: $(TF_PATH)
-              commandOptions: -out=$(artifactDirectory.path)/tfplan -var-file=$(TF_VAR_FILE)
-              environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
+          - template: helpers/publish-artifacts.yml
+            parameters:
+              artifactName: tfplan-$(ENVIRONMENT_NAME)
+              steps: 
+              - task: TerraformTaskV1@0
+                displayName: Plan Terraform
+                name: TerraformPlan
+                inputs:
+                  provider: $(TF_PROVIDER)
+                  command: plan
+                  workingDirectory: $(TF_PATH)
+                  commandOptions: -out=$(artifactDirectory.path)/tfplan -var-file=$(TF_VAR_FILE)
+                  environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
-          - script: mv $(TerraformPlan.jsonPlanFilePath) $(artifactDirectory.path)/tfplan.json
-            name: GetTFPlanJson
-            displayName: Get tfplan.json
+              - script: mv $(TerraformPlan.jsonPlanFilePath) $(artifactDirectory.path)/tfplan.json
+                name: GetTFPlanJson
+                displayName: Get tfplan.json
 
 - stage: Deploy
   jobs:
   - deployment: Deploy
     environment: $(ENVIRONMENT_NAME)
-    variables:
-    - ${{ if eq(parameters.useTerraform, true) }}:
-      - template: helpers/terraform-environment.yml
-        parameters:
-          AWS_ACCOUNT: $(AWS_ACCOUNT)  
-          AWS_REGION: $(AWS_REGION)
-          ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
-          localPath: $(Build.Repository.LocalPath)
-          projectName: $(System.TeamProject)
-          repoName: $(Build.Repository.Name)
-          terraformVersion: ${{ parameters.terraformVersion }}
     strategy:
       runOnce:
         ${{ if eq(parameters.useTerraform, true) }}:
