--- a/helpers/terraform-steps.yml
+++ b/helpers/terraform-steps.yml
@@ -1,16 +1,13 @@
 parameters:
-- name: terraformVersion
-  type: string
-  default: ''
 - name: steps
   type: stepList
 
 steps:
 - task: TerraformInstaller@0
   displayName: Install Terraform
-  condition: ne('${{ parameters.terraformVersion }}', '')
+  condition: ne('$(TF_VERSION)', '')
   inputs:
-    terraformVersion: ${{ parameters.terraformVersion }}
+    terraformVersion: $(TF_VERSION)
 
 - task: TerraformTaskV1@0
   displayName: Initialise Terraform
