--- a/helpers/terraform-environment.yml
+++ b/helpers/terraform-environment.yml
@@ -33,5 +33,6 @@ variables:
   TF_ROLE_ARN: 'arn:aws:iam::${{ parameters.AWS_ACCOUNT }}:role/wsl_role_deploy_Infrastructure'
   TF_VAR_AWS_ACCOUNT: '${{ parameters.AWS_ACCOUNT }}'
   TF_VAR_AWS_REGION: '${{ parameters.AWS_REGION }}'
+  TF_VAR_PROJECT: $(System.TeamProject)
   TF_VAR_ENVIRONMENT: '${{ parameters.ENVIRONMENT_NAME }}'
   TF_VAR_FILE: ./tfvars/${{ parameters.ENVIRONMENT_NAME }}.tfvars
