--- a/helpers/terraform-environment.yml
+++ b/helpers/terraform-environment.yml
@@ -25,11 +25,11 @@ variables:
   TF_VERSION: ${{ parameters.terraformVersion }}
   TF_IN_AUTOMATION: true
   TF_INPUT: false
-  TF_BACKEND_BUCKET: $(AWS_ACCOUNT)-state
+  TF_BACKEND_BUCKET: ${{ variables['AWS_ACCOUNT'] }}-state
   TF_BACKEND_KEY: '${{ parameters.repoName }}.tfstate'
   TF_PATH: '${{ parameters.localPath }}/terraform'
-  TF_ROLE_ARN: 'arn:aws:iam::$(AWS_ACCOUNT):role/wsl_role_deploy_Infrastructure'
-  TF_VAR_AWS_ACCOUNT: $(AWS_ACCOUNT)
+  TF_ROLE_ARN: 'arn:aws:iam::${{ variables['AWS_ACCOUNT'] }}:role/wsl_role_deploy_Infrastructure'
+  TF_VAR_AWS_ACCOUNT: ${{ variables['AWS_ACCOUNT'] }}
   TF_VAR_AWS_REGION: '${{ parameters.AWS_REGION }}'
   TF_VAR_ENVIRONMENT: '${{ parameters.ENVIRONMENT_NAME }}'
   TF_VAR_PROJECT: $(System.TeamProject)
