--- a/helpers/terraform-environment.yml
+++ b/helpers/terraform-environment.yml
@@ -28,7 +28,7 @@ variables:
   TF_BACKEND_BUCKET: ${{ variables['AWS_ACCOUNT'] }}-state
   TF_BACKEND_KEY: '${{ parameters.repoName }}.tfstate'
   TF_PATH: '${{ parameters.localPath }}/terraform'
-  TF_ROLE_ARN: 'arn:aws:iam::${{ variables['AWS_ACCOUNT'] }}:role/wsl_role_deploy_Infrastructure'
+  TF_ROLE_ARN: arn:aws:iam::${{ variables['AWS_ACCOUNT'] }}:role/wsl_role_deploy_Infrastructure
   TF_VAR_AWS_ACCOUNT: ${{ variables['AWS_ACCOUNT'] }}
   TF_VAR_AWS_REGION: '${{ parameters.AWS_REGION }}'
   TF_VAR_ENVIRONMENT: '${{ parameters.ENVIRONMENT_NAME }}'
