--- a/helpers/terraform-environment.yml
+++ b/helpers/terraform-environment.yml
@@ -6,6 +6,8 @@ parameters:
   type: string
 - name: ENVIRONMENT_NAME
   type: string
+- name: repoName
+  type: string
 - name: terraformProvider
   type: string
   default: 'aws'
@@ -22,7 +24,7 @@ variables:
   TF_IN_AUTOMATION: true
   TF_INPUT: false
   TF_BACKEND_BUCKET: ${{ parameters.AWS_ACCOUNT }}-state
-  TF_BACKEND_KEY: ${{ variables['Build.Repository.Name'] }}.tfstate
+  TF_BACKEND_KEY: ${{ parameters.repoName }}.tfstate
   TF_PATH: ${{ variables['Build.Repository.LocalPath'] }}/terraform
   TF_ROLE_ARN: arn:aws:iam::${{ parameters.AWS_ACCOUNT }}:role/wsl_role_deploy_Infrastructure
   TF_VAR_AWS_ACCOUNT: ${{ parameters.AWS_ACCOUNT }}
