--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -23,6 +23,7 @@ variables:
       AWS_ACCOUNT: $(AWS_ACCOUNT)  
       AWS_REGION: $(AWS_REGION)
       ENVIRONMENT_NAME: $(ENVIRONMENT_NAME)
+      repoName: $(Build.Repository.Name)
       terraformVersion: ${{ parameters.terraformVersion }}
 
 stages:
