--- a/helpers/terraform-environment.yml
+++ b/helpers/terraform-environment.yml
@@ -8,6 +8,8 @@ parameters:
   type: string
 - name: repoName
   type: string
+- name: sourcesDirectory
+  type: string
 - name: terraformProvider
   type: string
   default: 'aws'
@@ -25,7 +27,7 @@ variables:
   TF_INPUT: false
   TF_BACKEND_BUCKET: ${{ parameters.AWS_ACCOUNT }}-state
   TF_BACKEND_KEY: ${{ parameters.repoName }}.tfstate
-  TF_PATH: ${{ variables['Build.Repository.LocalPath'] }}/terraform
+  TF_PATH: ${{ parameters.sourcesDirectory }}/terraform
   TF_ROLE_ARN: arn:aws:iam::${{ parameters.AWS_ACCOUNT }}:role/wsl_role_deploy_Infrastructure
   TF_VAR_AWS_ACCOUNT: ${{ parameters.AWS_ACCOUNT }}
   TF_VAR_AWS_REGION: ${{ parameters.AWS_REGION }}
